common-applications/test-environment/opengpts/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  labels:
    app: opengpts
  name: opengpts
