common-applications/test-environment/opengpts/networkpolicy.yaml
kind: NetworkPolicy
metadata:
  name: website-policy-01
  namespace: opengpts
spec:
  podSelector:
    matchLabels:
      app: website
  ingress:
    - ports:
        - protocol: TCP
          port: 5173
      from:
        - podSelector:
            matchLabels:
              app: website
  policyTypes:
    - Ingress
apiVersion: networking.k8s.io/v1

---
kind: NetworkPolicy
metadata:
  name: server-policy-01
  namespace: opengpts
spec:
  podSelector:
    matchLabels:
      app: server
  ingress:
    - ports:
        - protocol: TCP
          port: 8000
      from:
        - podSelector:
            matchLabels:
              app: website
  policyTypes:
    - Ingress
apiVersion: networking.k8s.io/v1
